# dataflow-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  analyze_performance.sh  benchmark_results.json  message.json  workflow.json
.github/workflows/: docs.yml  release.yml
dataflow-ui/: package.json
dataflow-ui/src/: App.css  lib.ts
dataflow-ui/src/components/common/: JsonEditor.tsx  JsonViewer.tsx  SearchInput.tsx  StatusBar.tsx
dataflow-ui/src/components/workflow-visualizer/: WorkflowVisualizer.tsx  index.ts
dataflow-ui/src/components/workflow-visualizer/cards/: TaskRow.tsx  WorkflowCard.tsx
dataflow-ui/src/components/workflow-visualizer/hooks/: index.ts  useSearch.ts
dataflow-ui/src/components/workflow-visualizer/styles/: visualizer.css
dataflow-ui/src/components/workflow-visualizer/views/: WorkflowFlowView.tsx  index.ts
dataflow-ui/src/hooks/: useKeyboardShortcuts.ts
dataflow-ui/src/types/: workflow.ts
docs/: FUNCTIONS.md  SOURCE_FUNCTIONS.md  TASK_FUNCTIONS.md  book.toml  build-with-debugger.sh  proposal-async.md
docs/src/: SUMMARY.md  introduction.md  migrating-to-v4.md  playground.md
docs/src/advanced/: audit-trails.md  custom-functions.md  jsonlogic.md  performance.md
docs/src/api/: reference.md
docs/src/built-in-functions/: filter.md  integrations.md  log.md  map.md  overview.md  parse.md  publish.md  validation.md
docs/src/core-concepts/: engine.md  error-handling.md  message.md  overview.md  task.md  workflow.md
docs/src/getting-started/: basic-concepts.md  installation.md  quick-start.md
docs/src/ui/: overview.md
docs/src/wasm/: overview.md
docs/theme/: dataflow-playground.css  dataflow-playground.js
examples/: async_handler_benchmark.rs  async_migration.rs  benchmark.rs  complete_workflow.rs  custom_function.rs  error_handling.rs  hello_world.rs  http_enrichment.rs  map_performance_test.rs  memory_leak_analysis.rs  rayon_benchmark.rs  realistic_benchmark.rs  rules_engine.rs  source_functions_example.rs  threaded_benchmark.rs
src/: lib.rs  prelude.rs
src/engine/: compiler.rs  engine.rs  error.rs  executor.rs  message.rs  mod.rs  rayon.rs  retry.rs  task.rs  task_context.rs  task_executor.rs  task_outcome.rs  thread_local.rs  threaded.rs  trace.rs  utils.rs  workflow.rs  workflow_executor.rs
src/engine/functions/: config.rs  filter.rs  http.rs  integration.rs  log.rs  map.rs  mod.rs  parse.rs  publish.rs  validation.rs
src/engine/functions/enrich/: map.rs  mod.rs
src/engine/functions/fetch/: http.rs  mod.rs
src/engine/functions/source/: cron.rs  http.rs  mod.rs
src/engine/functions/task/: mod.rs
tests/: workflow_engine_test.rs
ui/: .gitignore  README.md  index.html  package-lock.json  package.json  publish.sh  tsconfig.json  tsconfig.lib.json  vite.config.ts  vite.lib.config.ts
ui/src/: App.css  App.tsx  lib.ts
ui/src/components/: DebugControls.tsx
ui/src/components/common/: ErrorBoundary.tsx  JsonEditor.tsx  index.ts
ui/src/components/workflow-visualizer/: WorkflowVisualizer.tsx  constants.ts  index.ts
ui/src/components/workflow-visualizer/cards/: ConditionBadge.tsx  FunctionTypeBadge.tsx  TaskRow.tsx  index.ts
ui/src/components/workflow-visualizer/components/: DebugStateIcon.tsx  FolderNode.tsx  TaskNode.tsx  TreeNode.tsx  WorkflowNode.tsx  colors.ts  index.ts
ui/src/components/workflow-visualizer/context/: DebuggerContext.tsx  ThemeContext.tsx  index.ts
ui/src/components/workflow-visualizer/debug/: DebugInfoBubble.tsx  DebuggerControls.tsx  IntegratedDebugToolbar.tsx  MessageInputPanel.tsx  MessageStatePanel.tsx  index.ts
ui/src/components/workflow-visualizer/hooks/: index.ts  useExpandedState.ts  useResizable.ts  useTreeNodeDebugState.ts
ui/src/components/workflow-visualizer/styles/: debug.css  flow-diagram.css  index.css  layout.css  theme.css  tree.css  visualizer.css
ui/src/components/workflow-visualizer/utils/: folderTree.ts  index.ts
ui/src/components/workflow-visualizer/views/: DetailsPanel.tsx  ResultPanel.tsx  RulesListView.tsx  TreeView.tsx  WorkflowFlowView.tsx  index.ts
ui/src/components/workflow-visualizer/views/detail-views/: DataLogicView.tsx  MappingContent.tsx  TaskContent.tsx  ValidationRuleContent.tsx  index.ts
ui/src/components/workflow-visualizer/views/flow-diagram/: GroupFlowDiagram.tsx  WorkflowFlowDiagram.tsx  buildFlowGraph.ts  buildGroupFlowGraph.ts  index.ts
ui/src/components/workflow-visualizer/views/flow-diagram/nodes/: FlowConditionNode.tsx  FlowSkipNode.tsx  FlowStartEndNode.tsx  FlowTaskNode.tsx  FlowWorkflowGroupNode.tsx  index.ts
ui/src/data/: sampleWorkflows.ts
ui/src/engines/: WasmEngineAdapter.ts  index.ts
ui/src/types/: debug.ts  debugConfig.ts  engine.ts  index.ts  workflow.ts
ui/src/utils/: dataUtils.ts  index.ts  jsonUtils.ts
wasm/: Cargo.toml  README.md  publish.sh
wasm/src/: lib.rs
wasm/tests/: web.rs
