[package]
name = "dataflow-rs"
version = "2.1.0"
edition = "2024"
exclude = [".DS_Store", "/target", ".vscode"]
authors = ["Plasmatic Engineering <shankar@goplasmatic.io>"]
license = "Apache-2.0"
description = "A lightweight rules engine for building IFTTT-style automation and data processing pipelines in Rust. Define rules with JSONLogic conditions, execute actions, and chain workflows."
readme = "README.md"
homepage = "https://github.com/GoPlasmatic/dataflow-rs"
repository = "https://github.com/GoPlasmatic/dataflow-rs"
keywords = ["rules-engine", "ifttt", "automation", "jsonlogic", "workflow"]
categories = ["data-structures", "development-tools", "config"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
datalogic-rs = "4.0"
uuid = { version = "1.20", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
log = "0.4"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
async-trait = "0.1"
quick-xml = { version = "0.37", features = ["serialize"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
env_logger = "0.11"
axum = "0.8"
futures = "0.3"
num_cpus = "1.17"

[workspace]
members = [".", "wasm"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "wasmbind"] }
uuid = { version = "1.20", features = ["v4", "js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }

# Optimized WASM release builds
[profile.release]
opt-level = "s"
lto = true
