[package]
name = "dataflow-wasm"
version = "2.0.4"
edition = "2024"
license = "Apache-2.0"
description = "WebAssembly bindings for dataflow-rs workflow engine"
authors = ["Plasmatic Engineering <shankar@goplasmatic.io>"]
repository = "https://github.com/GoPlasmatic/dataflow-rs"
keywords = ["workflow", "engine", "wasm", "webassembly"]
categories = ["wasm", "development-tools"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dataflow-rs = { path = ".." }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
